update look and feel and copy

--- a/404.html
+++ b/404.html
@@ -24,10 +24,10 @@
       <section class="section">
         <div class="content">
           <h1>That page isn’t here.</h1>
-          <p class="subtitle">If you typed a link from memory, it may have changed. If you came from a bookmark, it might be stale.</p>
+          <p class="subtitle">The link may be outdated. Use the pages below to get back to Decision Posture details and artifact examples.</p>
           <div class="cta-row">
             <a class="btn btn-primary" href="index.html">Go to home</a>
-            <a class="btn" href="decision-posture.html">What is Decision Posture?</a>
+            <a class="btn" href="contact.html">Apply for the 2-day cohort</a>
           </div>
         </div>
       </section>
