--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Decision Posture</title>
-  <meta name="description" content="Decision Posture is an applied workshop for operating safely under uncertainty. Built from hard lessons across complex, high-stakes technical work." />
+  <meta name="description" content="Why Decision Posture exists: reduce irreversible risk, decision regret, and surprise failure with concrete decision artifacts and 30-day follow-up enforcement." />
   <meta property="og:title" content="About — Decision Posture" />
   <meta property="og:description" content="Why this exists and how it's taught." />
   <meta property="og:type" content="website" />
@@ -36,23 +36,23 @@
         <div class="grid" style="align-items:center">
           <div>
             <h1>Why this exists</h1>
-            <p class="lead">I built Decision Posture for the moments when certainty shows up too early — and the cost of being wrong is high.</p>
-            <p>In most organizations, decision quality isn’t limited by intelligence. It’s limited by <strong>pressure</strong>: deadlines, visibility, authority, fear of blame. Under pressure, teams drift into confident narratives, misuse data, and diffuse ownership — then act as if uncertainty disappeared.</p>
-            <p>Decision Posture is a way to make the decision environment safer without slowing teams down: name what’s admissible, constrain what data is allowed to do, keep uncertainty visible, and preserve accountability.</p>
+            <p class="lead">I built Decision Posture for teams that keep paying for repeated-decision drag, surprise failure, and decision regret.</p>
+            <p>Most failures start before implementation. They start when pressure turns uncertainty into confidence, weak data into authority, and shared risk into unclear ownership.</p>
+            <p>Decision Posture is a corrective layer for that moment. It adds concrete decision artifacts to the process you already run, so risk is controlled before commitments harden.</p>
             <div class="cta-row" style="margin-top:14px">
-              <a class="btn btn-primary" href="decision-posture.html">What it is</a>
-              <a class="btn" href="contact.html">Invite me to run it</a>
+              <a class="btn btn-primary" href="contact.html">Apply for the next cohort</a>
+              <a class="btn" href="decision-posture.html">See what you get</a>
             </div>
           </div>
           <div class="card">
             <h2 style="margin-top:0">How I teach</h2>
             <ul>
-              <li><strong>Applied:</strong> we work real decisions, not hypotheticals</li>
-              <li><strong>Non-performative:</strong> no roleplay theater, no “leadership” platitudes</li>
-              <li><strong>Evidence-first:</strong> we preserve artifacts so the learning survives the room</li>
-              <li><strong>Respectful:</strong> engineered for senior technical audiences</li>
+              <li><strong>Applied:</strong> we use your live decisions, not hypotheticals</li>
+              <li><strong>Structured:</strong> every exercise maps to artifacts your team keeps</li>
+              <li><strong>Artifact-first:</strong> decision record template, evidence checklist, classifier, and constraint/trigger library</li>
+              <li><strong>Audience-fit:</strong> designed for architects, senior engineers, product/platform leaders, and exec sponsors in one cohort</li>
             </ul>
-            <p class="small"><span class="badge">Note</span> Some teams later adopt a documentation layer (e.g., HelixNote) to preserve decision artifacts. Tooling is optional.</p>
+            <p class="small"><span class="badge">Note</span> Cohorts are capped at 10 seats to keep exercises applied to live decisions. Some teams later add HelixNote as an optional system of record.</p>
           </div>
         </div>
       </section>
@@ -63,22 +63,22 @@
           <div class="cards">
             <div class="card">
               <h3>Direct language</h3>
-              <p class="small">We won’t soften the failure modes. Clarity requires naming what’s happening.</p>
+              <p class="small">We name where decision risk is increasing and who owns the next move.</p>
             </div>
             <div class="card">
-              <h3>Constraints, not opinions</h3>
-              <p class="small">The goal isn’t agreement. The goal is safe decisions under uncertainty.</p>
+              <h3>Controls, not opinions</h3>
+              <p class="small">We complete an admissible evidence checklist, apply reversibility labels, and set constraints and triggers.</p>
             </div>
             <div class="card">
-              <h3>Artifacts you can reuse</h3>
-              <p class="small">You leave with templates and examples your team can apply immediately.</p>
+              <h3>Follow-through</h3>
+              <p class="small">The 2-day cohort requires 30-day follow-up: weekly checks, one after-action, and metric review.</p>
             </div>
           </div>
 
           <hr>
 
-          <h2>Clarity Framework (one sentence)</h2>
-          <p class="small">Decision Posture is an applied module of the <strong>Clarity Framework</strong>, a body of work focused on how certainty replaces clarity under pressure — and how to prevent it.</p>
+          <h2>Why not just rely on smart leaders?</h2>
+          <p class="small">Because smart leaders still operate in distorted environments. This work changes the environment with explicit evidence rules, ownership, and trigger-based correction.</p>
         </div>
       </section>
 
