--- a/adoption.html
+++ b/adoption.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Adoption — Start without a rollout</title>
-  <meta name="description" content="A bottom‑up adoption path for Decision Posture that avoids theater: start with one decision, preserve evidence, and expand only when it pulls." />
+  <meta name="description" content="Adoption path after the 2-day Decision Posture cohort ($2K/seat, 10 seats): run one live decision with the artifact set and enforce for 30 days." />
   <meta property="og:title" content="Adoption — Decision Posture" />
-  <meta property="og:description" content="Start with one decision. No rollout required." />
+  <meta property="og:description" content="Start with one decision. Enforce for 30 days." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/logo.svg" />
   <meta name="theme-color" content="#070b12" />
@@ -38,21 +38,21 @@
     <main id="main" role="main">
       <section class="hero">
         <div class="eyebrow">Adoption</div>
-        <h1>Start without a rollout.</h1>
-        <p class="lead">Decision Posture is designed to be adopted <strong>bottom‑up</strong>, without framework theater. Start with one decision and expand only when it pulls.</p>
+        <h1>Adopt after the cohort.</h1>
+        <p class="lead">The 2-day cohort is the primary path. This page shows how teams apply the artifact set in the 30 days immediately after training.</p>
 
         <div class="cards">
           <div class="card">
             <h3>Principle</h3>
-            <p class="small">The goal is not to “implement a methodology.” The goal is to reduce irreversible risk under uncertainty.</p>
+            <p class="small">Target irreversible risk first. Do not launch a program. Run one decision with concrete artifacts in the first week after cohort.</p>
           </div>
           <div class="card">
             <h3>Guardrail</h3>
-            <p class="small">If you can’t describe the decision, the constraints, and the trigger conditions, you don’t have alignment — you have a story.</p>
+            <p class="small">If the decision record, evidence checklist, and classifier are not written down, the team is running on story.</p>
           </div>
           <div class="card">
-            <h3>Social safety</h3>
-            <p class="small">No one is asked to “agree.” People are asked to declare what would change their mind.</p>
+            <h3>Enforcement</h3>
+            <p class="small">Use a weekly posture check for 30 days. If triggers fire, the decision must be reopened.</p>
           </div>
         </div>
       </section>
@@ -61,42 +61,50 @@
         <div class="content">
           <h2>The bottom‑up path</h2>
           <ol>
-            <li><strong>Pick one live decision.</strong> Choose something high-impact but not politically explosive. Keep it small enough to be reversible.</li>
-            <li><strong>Run a 30-minute posture check.</strong> Identify what’s admissible, what’s missing, what must be constrained, and what triggers reversal.</li>
-            <li><strong>Capture a single artifact.</strong> A one-page decision record beats 40 slides. The artifact is the memory.</li>
-            <li><strong>Do a short after-action.</strong> Not “what happened,” but “what we assumed” and “what would have changed the decision.”</li>
-            <li><strong>Repeat twice.</strong> Adoption begins when the same failure mode shows up again.</li>
+            <li><strong>Pick one live decision.</strong> High impact, still reversible, and currently stuck in repeated review.</li>
+            <li><strong>Run a 30-minute posture check.</strong> Complete the admissible evidence checklist and reversible/irreversible classifier.</li>
+            <li><strong>Capture one decision artifact set.</strong> Fill the decision record template and attach the constraint/trigger library entries.</li>
+            <li><strong>Enforce for 30 days.</strong> Hold weekly checks, track trigger events, and run one required after-action on outcomes and misses.</li>
+            <li><strong>Expand only after evidence.</strong> Repeat on the next decision once the first cycle reduces churn or regret.</li>
           </ol>
 
           <h2>Signals you’re ready to expand</h2>
           <div class="cards">
             <div class="card">
               <h3>Pull</h3>
-              <p class="small">People ask for posture checks before high-stakes meetings.</p>
+              <p class="small">Leads ask for posture checks and decision records before key decisions without being told.</p>
             </div>
             <div class="card">
               <h3>Language</h3>
-              <p class="small">Teams reuse the vocabulary (constraints, triggers, admissibility) without prompting.</p>
+              <p class="small">Teams use admissibility, constraints, triggers, and reversibility labels in normal planning meetings.</p>
             </div>
             <div class="card">
               <h3>Artifacts</h3>
-              <p class="small">Decision records are referenced later, especially when narratives start to shift.</p>
+              <p class="small">Decision records and checklist results are used to resolve disputes and prevent repeated-decision drag.</p>
             </div>
           </div>
 
           <h2>When not to do this</h2>
           <ul>
-            <li>If leadership wants a “program” to signal change, rather than changing decisions.</li>
-            <li>If the organization punishes bad news — posture requires truth to be speakable.</li>
-            <li>If the decision is already politically decided and you’re being asked to create justification.</li>
+            <li>If leadership wants optics, not changed decision behavior.</li>
+            <li>If bad news cannot be surfaced safely.</li>
+            <li>If a decision is already fixed and only needs backfill justification.</li>
+          </ul>
+
+          <h2>How impact is measured</h2>
+          <ul>
+            <li>Decision cycle time from first proposal to committed call.</li>
+            <li>Late reversals after commitment (target: fewer).</li>
+            <li>Trigger-based re-openings before failure (target: more early corrections).</li>
+            <li>Coverage of decisions with records, checklist completion, and named owners.</li>
           </ul>
 
           <div class="card" style="margin-top:18px">
-            <h3>Want help picking the first decision?</h3>
-            <p class="small">A 30-minute call is usually enough to identify a low-drama decision with high signal.</p>
+            <h3>Want help choosing the first decision?</h3>
+            <p class="small">A short application call can confirm fit, identify your first decision, and reserve seats in the next 2-day cohort.</p>
             <div class="cta-row" style="margin-top:12px">
-              <a class="btn btn-primary" href="contact.html">Contact</a>
-              <a class="btn" href="talks.html">See entry points</a>
+              <a class="btn btn-primary" href="contact.html">Apply for cohort seats</a>
+              <a class="btn" href="talks.html">See prep formats</a>
             </div>
           </div>
 
