--- a/clarity.html
+++ b/clarity.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>The Clarity Framework</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="The Clarity Framework is a body of work focused on how decisions fail under pressure — and how certainty often replaces understanding." />
+  <meta name="description" content="The Clarity Framework studies why decision environments fail under pressure and supports Decision Posture as a corrective layer with concrete decision artifacts." />
 </head>
 
 <body>
@@ -13,13 +13,13 @@
     <h1>The Clarity Framework</h1>
 
     <p class="lede">
-      The <strong>Clarity Framework</strong> is a body of work focused on how decisions fail under pressure —
-      and how certainty often replaces understanding in high-stakes environments.
+      The <strong>Clarity Framework</strong> studies how high-stakes decisions fail under pressure,
+      especially when certainty appears before evidence is strong enough.
     </p>
 
     <p>
-      It exists to explain <em>why</em> intelligent, well-intentioned teams make decisions that later feel
-      inevitable, defensible, and wrong — even when no one was careless or uninformed.
+      It explains why capable teams still create repeated-decision drag, surprise failure,
+      and decision regret without seeing the risk in real time.
     </p>
 
     <hr />
@@ -38,12 +38,11 @@
     </ul>
 
     <p>
-      It does not prescribe <em>what</em> decisions to make.
+      It does not prescribe <em>what</em> to decide.
     </p>
 
     <p>
-      Instead, it studies <strong>decision environments</strong> — the conditions under which decisions are made —
-      and how pressure subtly changes behavior, language, and responsibility.
+      It studies <strong>decision environments</strong> and the conditions that increase irreversible risk.
     </p>
 
     <hr />
@@ -51,32 +50,31 @@
     <h2>The Core Observation</h2>
 
     <p>
-      Under pressure, three things reliably increase:
+      Under pressure, three factors increase:
     </p>
 
     <ul>
       <li><strong>Time pressure</strong></li>
       <li><strong>Visibility</strong></li>
-      <li><strong>Authority</strong></li>
+      <li><strong>Authority pressure</strong></li>
     </ul>
 
     <p>
-      These forces do not add information.
+      These factors do not add truth.
     </p>
 
     <p>
-      They change how people behave:
+      They change behavior:
     </p>
 
     <ul>
-      <li>exploration turns into justification</li>
-      <li>uncertainty turns into narrative</li>
-      <li>ownership turns into agreement</li>
+      <li>exploration becomes justification</li>
+      <li>uncertainty becomes narrative</li>
+      <li>ownership becomes group blur</li>
     </ul>
 
     <p>
-      This shift is usually invisible while it’s happening.
-      Its effects are obvious later.
+      The shift is subtle in the room and costly later.
     </p>
 
     <hr />
@@ -84,25 +82,25 @@
     <h2>Why This Work Exists</h2>
 
     <p>
-      Most postmortems explain <em>why</em> a decision made sense.
+      Most postmortems explain why a decision looked reasonable.
     </p>
 
     <p>
-      Clarity is interested in <strong>when a decision stopped being safe</strong>.
+      Clarity asks when the decision stopped being safe.
     </p>
 
     <p>
-      That moment is often:
+      That point is often:
     </p>
 
     <ul>
       <li>socially reinforced</li>
       <li>emotionally calm</li>
-      <li>widely agreed upon</li>
+      <li>widely supported</li>
     </ul>
 
     <p>
-      Which is why it’s so hard to notice — and so expensive to repeat.
+      That is why teams repeat it.
     </p>
 
     <hr />
@@ -110,23 +108,23 @@
     <h2>Decision Posture</h2>
 
     <p>
-      <strong>Decision Posture</strong> is the first applied module developed from the Clarity Framework.
+      <strong>Decision Posture</strong> is the first applied module from the Clarity Framework.
     </p>
 
     <p>
-      It focuses on making decisions <strong>safer under uncertainty</strong>, without requiring:
+      It is a corrective layer that reduces irreversible risk with concrete operating artifacts:
     </p>
 
     <ul>
-      <li>consensus</li>
-      <li>perfect data</li>
-      <li>hindsight</li>
-      <li>or authority to override the room</li>
+      <li>a decision record template</li>
+      <li>an admissible evidence checklist</li>
+      <li>a constraint/trigger library</li>
+      <li>a reversible/irreversible classifier</li>
+      <li>a required 30-day follow-up cycle</li>
     </ul>
 
     <p>
-      Decision Posture does not aim to produce better decisions.
-      It aims to produce <strong>safer failure modes</strong> when decisions are wrong.
+      The primary offer is a 2-day cohort ($2K/seat, 10 seats) for teams who need reliable behavior on high-stakes decisions and measurable change within 30 days.
     </p>
 
     <p>
@@ -149,8 +147,7 @@
     </ul>
 
     <p>
-      It is not a packaged product.
-      It is a growing body of work.
+      It is a working body of practice.
     </p>
 
     <hr />
@@ -162,13 +159,13 @@
     </p>
 
     <p>
-      Some ideas are:
+      Some parts are:
     </p>
 
     <ul>
       <li>still being tested</li>
-      <li>intentionally kept informal</li>
-      <li>only taught in facilitated settings</li>
+      <li>intentionally informal</li>
+      <li>best taught in facilitated settings</li>
     </ul>
 
     <p>
@@ -176,8 +173,8 @@
     </p>
 
     <p>
-      Clarity is not meant to be consumed quickly.
-      It is meant to be <strong>recognized</strong>.
+      The goal is not fast consumption.
+      The goal is reliable recognition under pressure.
     </p>
 
     <hr />
@@ -195,8 +192,8 @@
     </ul>
 
     <p class="closing">
-      <em>Clarity does not promise certainty.</em><br />
-      <em>It preserves understanding when certainty arrives too early.</em>
+      <em>Clarity does not remove uncertainty.</em><br />
+      <em>It helps teams act safely while uncertainty is still real.</em>
     </p>
 
   </main>
