--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contact — Decision Posture</title>
+    <title>Apply — Decision Posture Cohort</title>
     <meta
       name="description"
-      content="Request a talk, workshop, or the 2‑day Decision Posture cohort."
+      content="Apply for the 2-day Decision Posture cohort ($2K/seat). Each cohort is capped at 10 seats for senior engineers, architects, product leaders, and exec sponsors."
     />
-    <meta property="og:title" content="Contact — Decision Posture" />
+    <meta property="og:title" content="Apply — Decision Posture Cohort" />
     <meta
       property="og:description"
-      content="Request details or schedule a short call."
+      content="Request details or schedule a short scoping call."
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/logo.svg" />
@@ -52,16 +52,16 @@
         <section class="hero">
           <div class="hero-grid">
             <div>
-              <h1>Contact</h1>
+              <h1>Apply for the 2-day cohort</h1>
               <p class="subtitle">
-                Request a talk, workshop, or the 2‑day cohort. Keep it simple:
-                tell me what decision pressure looks like in your org.
+                Primary path: 2-day cohort at $2K per seat. Each cohort is capped at 10 seats.
+                Share your decision pressure, stakes, audience, and target timeline.
               </p>
 
               <div class="card" style="margin-top: 16px">
-                <h3>Send a note</h3>
+                <h3>Submit application</h3>
                 <p class="small">
-                  I typically respond within 1–2 business days.
+                  Applications are reviewed within 1–2 business days.
                 </p>
                 <form class="contact-form" data-form-id="inquiry">
                   <div class="form-row">
@@ -114,7 +114,7 @@
                     />
                   </div>
                   <button class="btn btn-primary" type="submit">
-                    Send message
+                    Submit application
                   </button>
                   <p
                     class="small form-status"
@@ -126,23 +126,23 @@
 
               <p class="small" style="margin-top: 14px">
                 <span class="badge">Note</span>
-                I keep this practical. If you’re looking for certification,
-                compliance theater, or a framework rollout, this is not a fit.
+                This application is for teams ready to run the 2-day cohort.
+                If needed, prep formats can support alignment before cohort start.
               </p>
             </div>
 
             <div class="card">
-              <h2>What happens next</h2>
+              <h2>Application process</h2>
               <ol class="small" style="padding-left: 18px">
                 <li>
-                  <strong>15 minutes</strong> to understand the decision
-                  environment and stakes.
+                  <strong>15 minutes</strong> to map the decision environment,
+                  irreversible risk, and audience.
                 </li>
-                <li>Pick a format that matches the audience and urgency.</li>
+                <li>Confirm cohort fit, seat count, and date window.</li>
                 <li>
-                  Run the session; produce one reusable artifact (not busywork).
+                  Reserve seats and prepare the cohort agenda around your live decisions.
                 </li>
-                <li>Only expand if it pulls.</li>
+                <li>Run the 2-day cohort, then execute the required 30-day follow-up with impact metrics.</li>
               </ol>
 
               <h3 style="margin-top: 18px">Accessibility</h3>
