--- a/decision-posture.html
+++ b/decision-posture.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Decision Posture — What it is</title>
-  <meta name="description" content="Decision Posture is an applied workshop that helps teams reduce irreversible risk under uncertainty through constraints, triggers, admissible evidence, and ownership." />
+  <meta name="description" content="Decision Posture is a 2-day cohort that helps teams reduce irreversible risk, decision regret, and surprise failure with a decision record template, admissible evidence checklist, constraint/trigger library, and reversible/irreversible classifier." />
   <meta property="og:title" content="Decision Posture — What it is" />
   <meta property="og:description" content="Applied decision safety: constraints, triggers, admissible evidence, and ownership." />
   <meta property="og:type" content="website" />
@@ -39,17 +39,17 @@
       <section class="hero">
         <div>
           <h1>What Decision Posture is</h1>
-          <p class="lead">A practical way to operate safely when you have to decide before you can know.</p>
+          <p class="lead">A 2-day paid cohort for teams stuck in repeated-decision drag, surprise failure, and high-cost decision regret.</p>
           <div class="cta-row">
-            <a class="btn btn-primary" href="talks.html">See formats</a>
-            <a class="btn" href="contact.html">Ask about a cohort</a>
+            <a class="btn btn-primary" href="contact.html">Apply for a seat</a>
+            <a class="btn" href="talks.html">See cohort prep options</a>
           </div>
         </div>
         <div>
           <div class="card">
             <span class="badge">Core premise</span>
             <h3 style="margin-top:10px">Confidence is not protection.</h3>
-            <p class="small">Decision Posture makes uncertainty explicit and then uses structure — not optimism — to reduce irreversible risk.</p>
+            <p class="small">Decision Posture makes uncertainty explicit and uses structure to reduce irreversible risk before commitments harden.</p>
           </div>
         </div>
       </section>
@@ -60,10 +60,10 @@
             <div class="card">
               <h2>What it trains</h2>
               <ul>
-                <li><strong>Admissible evidence:</strong> what information is allowed to justify action (and what isn’t).</li>
-                <li><strong>Constraints:</strong> guardrails that prevent avoidable harm while you learn.</li>
-                <li><strong>Triggers:</strong> explicit conditions that force re-evaluation when reality changes.</li>
-                <li><strong>Ownership:</strong> clarity about who can decide, who must be consulted, and who carries risk.</li>
+                <li><strong>Admissible evidence checklist:</strong> what is allowed to justify action, and what is not.</li>
+                <li><strong>Constraints:</strong> guardrails that limit blast radius while you learn.</li>
+                <li><strong>Triggers:</strong> explicit conditions that force re-evaluation when reality shifts.</li>
+                <li><strong>Ownership:</strong> who decides, who is consulted, and who carries risk.</li>
               </ul>
             </div>
 
@@ -75,7 +75,7 @@
                 <li>Not “more data.”</li>
                 <li>Not consensus theatre.</li>
               </ul>
-              <p class="small">It’s a corrective layer: it makes other frameworks more effective by making decisions more honest.</p>
+              <p class="small">It’s a corrective layer: it adds decision controls your existing system usually does not enforce.</p>
             </div>
           </div>
 
@@ -83,9 +83,9 @@
             <div class="card">
               <h2>Who it’s for</h2>
               <ul>
-                <li>Architects and senior engineers who own outcomes without owning authority.</li>
-                <li>Product and platform leaders responsible for high-stakes tradeoffs.</li>
-                <li>Executives who want fewer surprise failures and less decision regret.</li>
+                <li>Architects and senior engineers accountable for outcomes across teams.</li>
+                <li>Product and platform leaders managing irreversible tradeoffs.</li>
+                <li>Executive sponsors who need measurable reduction in surprise failure and decision regret.</li>
               </ul>
             </div>
             <div class="card">
@@ -102,16 +102,16 @@
             <h2>What people leave with</h2>
             <div class="grid" style="margin-top:10px">
               <div>
-                <h3>Shared language</h3>
-                <p class="small">Phrases and moves that work in hostile rooms: make uncertainty visible without derailing progress.</p>
+                <h3>Decision record template</h3>
+                <p class="small">A one-page template with decision, scope, owner, assumptions, risk class, target date, and explicit reversal conditions.</p>
               </div>
               <div>
-                <h3>Reusable artifacts</h3>
-                <p class="small">A decision template, admissibility cards, and a set of constraints/triggers you can reuse on real work.</p>
+                <h3>Evidence + control kit</h3>
+                <p class="small">An admissible evidence checklist, a constraint/trigger library, and a reversible/irreversible classifier used in planning and review meetings.</p>
               </div>
               <div>
-                <h3>Behavior under pressure</h3>
-                <p class="small">How to keep posture when authority, deadlines, or visibility distort the room.</p>
+                <h3>30-day follow-up requirement</h3>
+                <p class="small">Weekly posture checks, trigger reviews, and one required after-action within 30 days on a live decision, with baseline-vs-30-day metrics.</p>
               </div>
             </div>
           </div>
@@ -120,17 +120,19 @@
             <div class="card">
               <h2>Formats</h2>
               <ul>
-                <li><strong>2‑day cohort (flagship):</strong> full training + simulations + applied work.</li>
-                <li><strong>Half‑day applied:</strong> use posture on one real decision end‑to‑end.</li>
-                <li><strong>60–90 minute talk:</strong> high-signal primer for architects, product, or leadership.</li>
+                <li><strong>2‑day cohort (primary, $2K/seat, 10 seats):</strong> full training + simulations + applied work on your decisions.</li>
+                <li><strong>Half‑day applied:</strong> optional prep or follow-through around one live decision.</li>
+                <li><strong>60–90 minute talk:</strong> optional executive briefing before a cohort.</li>
               </ul>
-              <p class="small">Start small is a feature, not a downgrade.</p>
+              <p class="small">Start small is a feature, not a downgrade. The 2-day cohort is the default path for measurable change.</p>
             </div>
             <div class="card">
               <h2>FAQ (short)</h2>
-              <p class="small"><strong>Is this just “get more data”?</strong><br> No. It’s about what data is allowed to do, and what you must do when data can’t exist.</p>
-              <p class="small"><strong>Does this replace Agile/OKRs?</strong><br> No. It prevents those systems from amplifying false certainty.</p>
-              <p class="small"><strong>Do we need HelixNote?</strong><br> No. Documentation is tool-agnostic. HelixNote is an optional way to preserve decision posture over time.</p>
+              <p class="small"><strong>Is this just “get more data”?</strong><br> No. You get an admissible evidence checklist and rules for what data cannot authorize.</p>
+              <p class="small"><strong>Does this replace Agile/OKRs?</strong><br> No. It is a corrective layer that adds decision controls inside those systems.</p>
+              <p class="small"><strong>Why not just rely on smart leaders?</strong><br> Smart leaders still fail in distorted decision environments. This training changes the environment with explicit controls and artifacts.</p>
+              <p class="small"><strong>How is impact measured?</strong><br> Track decision cycle time, late reversals, trigger-based re-openings, and coverage of decision records with named owners over 30 days.</p>
+              <p class="small"><strong>Do we need HelixNote?</strong><br> No. Documentation is tool-agnostic. HelixNote is optional as a system of record.</p>
             </div>
           </div>
         </div>
