--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Decision Posture — Reduce irreversible risk under uncertainty</title>
-  <meta name="description" content="Decision Posture is an applied workshop for engineers and leaders who make irreversible decisions under uncertainty. Reduce blast radius when you're wrong." />
+  <meta name="description" content="Decision Posture is a 2-day cohort for architects, senior engineers, product/platform leaders, and exec sponsors to cut repeated-decision drag, surprise failure, and decision regret with concrete decision artifacts." />
   <meta property="og:title" content="Decision Posture" />
   <meta property="og:description" content="Applied decision safety for high-stakes environments." />
   <meta property="og:type" content="website" />
@@ -37,73 +37,75 @@
 
     <main id="main">
       <section class="hero">
-        <div class="kicker">Invitation-only pilot · small cohorts · built for real decisions</div>
-        <h1>Confidence is not a safety mechanism.</h1>
+        <div class="kicker">Primary path: 2-day cohort · $2K per seat · 10 seats per cohort</div>
+        <h1>Repeated-decision drag is expensive.</h1>
         <p class="lede">
-          Decision Posture is a practical workshop for people who must decide before they can know.
-          You’ll learn how to keep uncertainty visible, preserve optionality longer, and reduce the blast radius when you’re wrong.
+          Teams revisit the same calls, ship avoidable surprise failures, and carry decision regret for months.
+          The cost compounds each quarter as reversible choices become irreversible commitments.
+          Decision Posture is a 2-day cohort for fixing that now, before the next high-stakes cycle locks in avoidable risk.
         </p>
 
         <div class="cta-row">
-          <a class="btn btn-primary" href="decision-posture.html">Explore the workshop</a>
-          <a class="btn" href="talks.html">See talks & formats</a>
+          <a class="btn btn-primary" href="contact.html">Apply for a cohort seat</a>
+          <a class="btn" href="decision-posture.html">See cohort outcomes</a>
         </div>
 
         <div class="cards">
           <div class="card">
             <h3>Built for high-stakes rooms</h3>
-            <p class="small">Architects, senior engineers, product and technology leaders, incident responders — anyone accountable when outcomes harden.</p>
+            <p class="small">Architects, senior engineers, product and platform leaders, and exec sponsors who own outcomes when uncertainty is still high.</p>
           </div>
           <div class="card">
-            <h3>Not a framework pitch</h3>
-            <p class="small">No decks. No theater. No “best practices.” We work on real decisions with constraints, triggers, and ownership under pressure.</p>
+            <h3>A corrective layer</h3>
+            <p class="small">Keep your current delivery system. Add a decision layer that sets admissible evidence, constraints, triggers, ownership, and reversibility rules.</p>
           </div>
           <div class="card">
-            <h3>Leaves durable artifacts</h3>
-            <p class="small">You leave with language and decision artifacts you can reuse — not inspiration that evaporates on Monday morning.</p>
+            <h3>Artifact pack</h3>
+            <p class="small">Leave with a decision record template, admissible evidence checklist, constraint/trigger library, reversible/irreversible classifier, and a required 30-day follow-up cadence.</p>
           </div>
         </div>
       </section>
 
       <section class="section">
         <div class="content">
-          <h2>What fails isn’t intelligence. It’s the decision environment.</h2>
+          <h2>What fails is usually posture, not IQ.</h2>
           <p>
-            Under pressure, organizations manufacture certainty: weak data gains authority, narratives replace signal, and responsibility diffuses at exactly the wrong time.
-            Decision Posture gives you a repeatable way to interrupt that drift without escalating conflict.
+            Under pressure, even smart leaders over-trust confidence, weak evidence gets promoted, and ownership blurs.
+            The result is repeated decision loops, irreversible commitments, and costly reversals.
+            Decision Posture gives teams a concrete way to interrupt that pattern.
           </p>
 
           <blockquote>
-            <p><strong>This is not about being right.</strong> It’s about being safer when you’re wrong — while the decision is still in motion.</p>
+            <p><strong>This is not about being right.</strong> It is about staying safer when you are wrong and the decision is still live.</p>
           </blockquote>
 
           <div class="cards">
             <div class="card">
-              <h3>Engineers & architects</h3>
-              <p class="small">Get language that survives hierarchy. Identify unsafe certainty early. Preserve reversibility longer.</p>
+              <h3>Architects & senior engineers</h3>
+              <p class="small">Use the classifier and evidence checklist to separate reversible calls from irreversible commitments.</p>
             </div>
             <div class="card">
-              <h3>VPs & execs</h3>
-              <p class="small">Reduce surprise failures. Make decisions defensible. Contain risk when decisions can’t wait.</p>
+              <h3>Product & platform leaders</h3>
+              <p class="small">Use the constraint/trigger library to reduce churn and force re-evaluation when signals change.</p>
             </div>
             <div class="card">
-              <h3>Teams</h3>
-              <p class="small">Stop arguing opinions. Work the decision structure: admissibility, constraints, triggers, ownership.</p>
+              <h3>Exec sponsors</h3>
+              <p class="small">Use decision records and 30-day follow-up reviews to reduce surprise failure and decision regret, with visible metrics.</p>
             </div>
           </div>
 
           <div class="card" style="margin-top:18px">
             <h3>Start small</h3>
-            <p class="small">If you’re not ready for a 2‑day cohort, start with a 60–90 minute talk or a half‑day applied workshop. No rollout required.</p>
+            <p class="small">The flagship is the 2-day cohort at $2K/seat with 10 seats. Monday morning, teams run the template on one live decision, use the checklist in review meetings, and enforce trigger checks weekly.</p>
             <div class="cta-row" style="margin-top:12px">
-              <a class="btn btn-primary" href="contact.html">Request details</a>
-              <a class="btn" href="adoption.html">See adoption path</a>
+              <a class="btn btn-primary" href="contact.html">Start cohort application</a>
+              <a class="btn" href="adoption.html">See 30-day rollout</a>
             </div>
           </div>
 
           <p class="small" style="margin-top:14px">
             <span class="badge">Note</span>
-            Decision Posture is an applied module of the Clarity Framework — a body of work focused on how certainty replaces clarity under pressure.
+            Impact is measured over 30 days: decision cycle time, re-opened decisions triggered by new evidence, percent of decisions with named owners, and avoided late reversals.
           </p>
         </div>
       </section>
