--- a/talks.html
+++ b/talks.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Talks & Workshops — Decision Posture</title>
-  <meta name="description" content="Entry points: 45–90 minute talks, half‑day workshops, and the 2‑day Decision Posture cohort." />
-  <meta property="og:title" content="Talks & Workshops — Decision Posture" />
+  <title>Cohort Prep Formats — Decision Posture</title>
+  <meta name="description" content="Prep formats for the primary 2-day Decision Posture cohort ($2K/seat, 10 seats). Talks and half-day sessions support cohort adoption." />
+  <meta property="og:title" content="Cohort Prep Formats — Decision Posture" />
   <meta property="og:description" content="Multiple entry points into decision safety." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#070b12" />
@@ -39,79 +39,80 @@
         <div class="hero">
           <div>
             <span class="badge">Entry points</span>
-            <h1>Talks & workshops</h1>
-            <p class="lede">Same spine. Different doors. Choose the time commitment that fits your reality.</p>
+            <h1>Cohort prep formats</h1>
+            <p class="lede">The primary path is the 2-day cohort. These formats are optional prep when you need alignment before committing 10 seats.</p>
           </div>
         </div>
 
         <div class="card">
-          <h2>Tier 1 — Talks (45–90 minutes)</h2>
-          <p class="small">Low-risk intros for meetups, conferences, or internal sessions. Each talk stands alone.</p>
+          <h2>Tier 1 — Executive briefings (45–90 minutes)</h2>
+          <p class="small">Use briefings to align sponsors on repeated-decision drag, surprise failure, decision regret, and irreversible risk before a cohort.</p>
           <div class="cards">
             <div class="card">
               <h3>Confidence Is Not a Safety Mechanism</h3>
-              <p class="small">How pressure manufactures certainty — and how to keep decisions safe when the room gets confident too fast.</p>
+              <p class="small">How pressure manufactures certainty and hides irreversible risk before anyone notices.</p>
             </div>
             <div class="card">
               <h3>More Data Won’t Save You</h3>
-              <p class="small">Why “more data” often accelerates bad decisions. Introduces admissibility: what evidence is allowed to justify action.</p>
+              <p class="small">Why teams still fail with dashboards. Introduces the admissible evidence checklist.</p>
             </div>
             <div class="card">
               <h3>Why Smart Systems Fail Under Pressure</h3>
-              <p class="small">What changes in decision environments when stakes rise — and why good systems start amplifying risk.</p>
+              <p class="small">How normal planning systems amplify risk when ownership blurs and triggers are missing.</p>
             </div>
             <div class="card">
               <h3>When Agreement Becomes a Risk</h3>
-              <p class="small">Why consensus can hide uncertainty and diffuse ownership at exactly the wrong moment.</p>
+              <p class="small">How consensus can hide uncertainty and delay hard calls until options are gone.</p>
             </div>
           </div>
         </div>
 
         <div class="card" style="margin-top:18px">
-          <h2>Tier 2 — Workshops (half-day)</h2>
-          <p class="small">Applied sessions built around one real decision your team is facing. The goal is not perfect certainty — it’s safer posture.</p>
+          <h2>Tier 2 — Cohort prep workshops (half-day)</h2>
+          <p class="small">Use one half-day to prepare a team for the 2-day cohort. Build one decision record and set constraints and triggers you will run on Monday.</p>
           <div class="cards">
             <div class="card">
               <h3>Decision Posture (Applied)</h3>
-              <p class="small">Work one decision end-to-end: admissibility → constraints → triggers → ownership. Leave with an artifact you can reuse.</p>
+              <p class="small">Run one decision end-to-end with the decision record template, evidence checklist, and ownership map.</p>
             </div>
             <div class="card">
               <h3>Upward Enforcement</h3>
-              <p class="small">How to preserve structure when leadership pressure appears — without escalating politics or turning it into “pushback.”</p>
+              <p class="small">Keep constraint and trigger rules intact when deadline pressure or executive urgency tries to skip them.</p>
             </div>
             <div class="card">
               <h3>Bottom-Up Adoption Without Theater</h3>
-              <p class="small">Start with one decision and a few safe moves. No framework rollout. No evangelism. No organizational immune response.</p>
+              <p class="small">Install posture with no rollout. Start on one decision and enforce follow-up behavior for 30 days.</p>
             </div>
             <div class="card">
               <h3>Data Admissibility Clinic</h3>
-              <p class="small">Teach your team to distinguish “true data” from “decision-allowed data.” Prevent metrics from becoming authority laundering.</p>
+              <p class="small">Use the evidence checklist to separate signal from authority theater before irreversible calls.</p>
             </div>
           </div>
         </div>
 
         <div class="card" style="margin-top:18px">
-          <h2>Tier 3 — Flagship (2 days)</h2>
-          <p class="small">The full cohort experience. Designed for senior ICs, architects, product leaders, and executives who repeatedly face irreversible decisions.</p>
+          <h2>Tier 3 — Primary path (2 days)</h2>
+          <p class="small">The core offer: a 2-day paid cohort at <strong>$2K/seat</strong> for architects, senior engineers, product/platform leaders, and exec sponsors. Each cohort is capped at 10 seats.</p>
           <ul>
-            <li>Structured exercises that pressure-test posture in a safe environment</li>
-            <li>Reusable decision templates and facilitation phrases</li>
-            <li>Admissibility, constraints, triggers, ownership — practiced, not theorized</li>
+            <li>Decision record template for live decisions</li>
+            <li>Admissible evidence checklist for decision gating</li>
+            <li>Constraint/trigger library and reversible/irreversible classifier</li>
+            <li>Required 30-day follow-up with weekly checks, one after-action, and metric review</li>
           </ul>
           <div class="cta-row">
-            <a class="btn btn-primary" href="contact.html">Request cohort details</a>
-            <a class="btn" href="decision-posture.html">What you’ll leave with</a>
+            <a class="btn btn-primary" href="contact.html">Apply for the next cohort</a>
+            <a class="btn" href="decision-posture.html">See cohort deliverables</a>
           </div>
         </div>
 
         <p class="small" style="margin-top:14px">
-          If you’re unsure where to start, tell me your audience (architects, PMs, execs) and the kind of decisions you’re making. I’ll recommend the smallest step that still matters.
+          Use a prep format only if needed. The 2-day cohort is where teams install repeatable behavior and measured outcomes.
         </p>
 
       </section>
 
       <div class="footer" role="contentinfo">
-        <span><strong>Decision Posture</strong> · Talks & Workshops</span>
+        <span><strong>Decision Posture</strong> · Cohort Prep Formats</span>
         <span>Created by HelixNote, an Echelon Foundry initiative</span>
       </div>
     </main>
