--- a/contact-example.html
+++ b/contact-example.html
@@ -6,10 +6,10 @@ permalink: /contact/
 
 <section class="hero">
   <div class="hero-meta">Contact</div>
-  <h1>Let’s build something clear, resilient, and human.</h1>
+  <h1>Apply for the 2-day cohort.</h1>
   <p class="hero-lede">
-    Use the form to share a quick overview, your timeline, and the stakes. If we are a fit,
-    I will follow up with next steps and available windows to talk.
+    Share your decision pressure, timeline, and stakes. If we are a fit,
+    I will follow up with seat availability and cohort windows.
   </p>
 </section>
 
@@ -47,27 +47,26 @@ permalink: /contact/
 
   <div class="stacked-cards">
     <div class="card contact-card">
-      <h3 class="card-title">Other ways to connect</h3>
+      <h3 class="card-title">Application details</h3>
       <p class="muted">
-        If email is easier, reach out directly. I also review speaking opportunities and advisory
-        requests here.
+        If email is easier, reach out directly. Include your audience, seat count, and decision type.
       </p>
       <div class="contact-method">
         <span class="contact-label">Email</span>
         <a href="mailto:kemiller2002@gmail.com">kemiller2002@gmail.com</a>
       </div>
       <div class="contact-method">
-        <span class="contact-label">Focus</span>
-        <span>Engineering leadership, security, AI strategy, and complex system recovery.</span>
+        <span class="contact-label">Cohort outputs</span>
+        <span>Decision record template, admissible evidence checklist, constraint/trigger library, reversible/irreversible classifier, and 30-day follow-up requirement.</span>
       </div>
     </div>
 
     <div class="card contact-card">
       <h3 class="card-title">Helpful details</h3>
       <ul class="card-list">
-        <li>What outcome matters most and why right now.</li>
-        <li>The team size, stakeholders, and decision timeline.</li>
-        <li>Any constraints around security, compliance, or risk.</li>
+        <li>What outcome matters most and why now.</li>
+        <li>The decision owner, stakeholders, and timeline.</li>
+        <li>Current constraints around security, compliance, or risk.</li>
       </ul>
     </div>
   </div>
